Se creó con Colab

--- a/Tarea8.ipynb
+++ b/Tarea8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjCAm6bSuThPcTsHK7ezLh",
+      "authorship_tag": "ABX9TyMi/dm56cG88wrIaQqWe5c0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -795,7 +795,7 @@
         "id": "K3_wUQnwn69r",
         "outputId": "12d93803-a178-4590-e281-3999015d05fa"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,59 +830,39 @@
             "[CV 2/2] END max_depth=15, min_samples_split=5, n_estimators=1500;, score=0.807 total time= 1.1min\n",
             "[CV 1/2] END max_depth=15, min_samples_split=5, n_estimators=2000;, score=0.785 total time= 1.5min\n",
             "[CV 2/2] END max_depth=15, min_samples_split=5, n_estimators=2000;, score=0.807 total time= 1.5min\n",
-            "[CV 1/2] END max_depth=15, min_samples_split=5, n_estimators=2500;, score=0.785 total time= 1.9min\n"
+            "[CV 1/2] END max_depth=15, min_samples_split=5, n_estimators=2500;, score=0.785 total time= 1.9min\n",
+            "[CV 2/2] END max_depth=15, min_samples_split=5, n_estimators=2500;, score=0.807 total time= 1.9min\n",
+            "[CV 1/2] END max_depth=15, min_samples_split=8, n_estimators=1500;, score=0.783 total time= 1.1min\n",
+            "[CV 2/2] END max_depth=15, min_samples_split=8, n_estimators=1500;, score=0.806 total time= 1.1min\n",
+            "[CV 1/2] END max_depth=15, min_samples_split=8, n_estimators=2000;, score=0.782 total time= 1.4min\n",
+            "[CV 2/2] END max_depth=15, min_samples_split=8, n_estimators=2000;, score=0.805 total time= 1.5min\n",
+            "[CV 1/2] END max_depth=15, min_samples_split=8, n_estimators=2500;, score=0.782 total time= 1.8min\n",
+            "[CV 2/2] END max_depth=15, min_samples_split=8, n_estimators=2500;, score=0.806 total time= 1.8min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=3, n_estimators=1500;, score=0.784 total time=  58.2s\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=3, n_estimators=1500;, score=0.805 total time=  56.8s\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=3, n_estimators=2000;, score=0.785 total time= 1.3min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=3, n_estimators=2000;, score=0.806 total time= 1.3min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=3, n_estimators=2500;, score=0.785 total time= 1.6min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=3, n_estimators=2500;, score=0.805 total time= 1.6min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=5, n_estimators=1500;, score=0.784 total time=  56.4s\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=5, n_estimators=1500;, score=0.805 total time=  56.8s\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=5, n_estimators=2000;, score=0.784 total time= 1.3min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=5, n_estimators=2000;, score=0.805 total time= 1.3min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=5, n_estimators=2500;, score=0.784 total time= 1.6min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=5, n_estimators=2500;, score=0.805 total time= 1.6min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=8, n_estimators=1500;, score=0.781 total time=  56.3s\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=8, n_estimators=1500;, score=0.804 total time=  55.1s\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=8, n_estimators=2000;, score=0.781 total time= 1.2min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=8, n_estimators=2000;, score=0.803 total time= 1.2min\n",
+            "[CV 1/2] END max_depth=12, min_samples_split=8, n_estimators=2500;, score=0.782 total time= 1.5min\n",
+            "[CV 2/2] END max_depth=12, min_samples_split=8, n_estimators=2500;, score=0.802 total time= 1.5min\n",
+            "Mejores parámetros encontrados:\n",
+            "{'max_depth': 15, 'min_samples_split': 3, 'n_estimators': 2500}\n",
+            "0.7967085330625321\n",
+            "R-cuadrado en el set de Test: 0.7888\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Asumiendo que tu DataFrame se llama 'df' y ya está cargado\n",
-        "# Por ejemplo: df = pd.read_csv('tu_archivo.csv')\n",
-        "\n",
-        "# --- ¡Revisa este nombre de columna! ---\n",
-        "# Asegúrate de que sea 'sqlt_living' o 'sqft_living'\n",
-        "columna_x = 'sqlt_living'\n",
-        "columna_y = 'Price'\n",
-        "\n",
-        "# --- Creación del gráfico ---\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "\n",
-        "# Usamos regplot para dibujar el scatter y la línea de regresión\n",
-        "sns.regplot(\n",
-        "    data=df,\n",
-        "    x=columna_x,\n",
-        "    y=columna_y,\n",
-        "    # Estilo de los puntos (opcional)\n",
-        "    scatter_kws={'alpha': 0.3},\n",
-        "    # Estilo de la línea: ¡color rojo!\n",
-        "    line_kws={'color': 'red'}\n",
-        ")\n",
-        "\n",
-        "# --- Añadir títulos y etiquetas ---\n",
-        "plt.title(f'Regresión Lineal: {columna_y} vs. {columna_x}', fontsize=16)\n",
-        "plt.xlabel('Superficie', fontsize=12)\n",
-        "plt.ylabel('Precio', fontsize=12)\n",
-        "plt.grid(True)\n",
-        "plt.tight_layout()\n",
-        "\n",
-        "# --- Guardar la imagen ---\n",
-        "# Puedes guardar la imagen en un archivo\n",
-        "plt.savefig('mi_regresion_lineal.png')\n",
-        "plt.close()\n",
-        "\n",
-        "print(\"Gráfico de regresión guardado como 'mi_regresion_lineal.png'\")"
-      ],
-      "metadata": {
-        "id": "qxIf_OQNodC2"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
